# mx-bot-training

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doxygen  imgui.ini
apps/: CMakeLists.txt  launcher.cpp
bots/: CMakeLists.txt
bots/bot1/: CMakeLists.txt  bot1.cpp
bots/include/bot/: types.hpp
bots/src/: CMakeLists.txt
include/mx/: application.hpp  fileInput.hpp  fileUtils.hpp  mx.hpp  time.hpp
include/mx/bot/: arena.hpp  bot.hpp  botApplication.hpp  botManager.hpp
include/mx/botlib/: remoteBot.hpp
include/mx/core/: application.hpp  console.hpp  log.hpp  platform.hpp  time.hpp
src/: CMakeLists.txt  application.cpp  entrypoint.cpp  fileInput.cpp  fileUtils.cpp
src/bot/: arena.cpp  bot.cpp  botApplication.cpp  botManager.cpp
src/botlib/: remoteBot.cpp
src/core/: application.cpp  console.cpp  entrypoint.cpp
